@@ -10,6 +10,16 @@
     public static class ExtensionMethods
     {
         /// <summary>
+        /// Safely converts an object to a string.
+        /// </summary>
+        /// <param name="value">The value to convert.</param>
+        /// <returns>The converted string or null, if the value was null.</returns>
+        internal static string SafeToString(this object value)
+        {
+            return value == null ? null : value.ToString();
+        }
+
+        /// <summary>
         /// Gets the resource by searching the hierarchy of of elements.
         /// </summary>
         /// <typeparam name="T">The type of resource.</typeparam>
